refactor: clean up code formatting and remove commented-out code in Tratamento and DtoUtils